-[P3D06.04] If one machine had a build request and the build time has elapsed then the job is left completed at the Machine and the     machine slot continues to be in use. -[P3D06.05] If the Machine receives a Complete Job request then the machine job is completed, the Part stock updated, persisted on the     Job repository and the Machine is ready to accept new Jobs.
